# burpctl

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  gradlew
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
bp/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
bp/src/bp/: __init__.py  cli.py  client.py  cliutil.py  config.py  fuzz.py  ledger.py  models.py  output.py  pos.py  runner.py  wire.py
bp/src/bp/commands/: __init__.py  collaborator.py  decoder.py  history.py  obs.py  proxynav.py  repeater.py  scanner.py  securityscan.py  session.py  utils.py
bp/tests/: test_cli_conformance.py  test_cli_global_opts.py  test_cli_global_opts_payloads.py  test_cli_version.py  test_client.py  test_cliutil.py  test_config.py  test_decoder.py  test_entrypoints.py  test_fuzz.py  test_history.py  test_ledger.py  test_obs.py  test_output.py  test_pos.py  test_proxy.py  test_runner.py  test_scanner.py  test_securityscan.py  test_wire.py
docs/: ALGORITHMS.md  CLI.md  OUTPUT.md  RESEARCH-concepts.md  SPEC.md  STATE-AND-CONFIG.md
docs/adr/: 0002-cli-name-bp.md  0003-pos-fuzzing-grammar.md  0005-run-ledger-observability.md  0006-methodology-sdd-tdd-ddd.md  0007-product-scope-full-functionality-configurable-safety.md  0008-implementation-language-python-fully-typed.md  0009-global-output-options-position-tolerant.md  0010-check-exit-on-findings.md  0011-rebrand-burpctl.md  0012-primary-name-bp.md  INDEX.md
docs/bdd/: 00-common.feature  00-output.feature  01-health.feature  02-proxy.feature  (+12 more)
(+26 files in other folders)
