[project]
name = "bp"
version = "0.1.0"
description = "bp — Burp Suite REST CLI client (drives the burp-rest-extension on :8089)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bp"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
