[project]
name = "burpctl"
version = "1.1.0"
description = "burpctl — drive Burp Suite from the command line (talks to the burp-rest-extension on :8089)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.scripts]
burpctl = "bp.cli:cli_main"
bp = "bp.cli:cli_main"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bp"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
